use config.json instead of SECRETS.py

--- a/.gitignore
+++ b/.gitignore
@@ -131,8 +131,8 @@ dmypy.json
 # firebase credentials file
 serviceAccountKey.json
 
-# Secrets
-SECRETS.py
+# configuration
+config.json
 
 # logs
 logs.txt
